--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@
 }
 
 .wrapper{
-    width: auto;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -256,6 +256,7 @@
     position: unset;
     top: 0%;
     width: 100%;
+    border-bottom: 3px solid whitesmoke;
     background-color: white;
     z-index: 2;
     opacity: 0.9;
